# c_cpp_telegrambot

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  AbseilConfigureCopts.cmake  CMakeLists.txt  CMakePresets.json  DEPENDENCY_EJECTION.md  DIFF-2375f574-to-HEAD.md  README.md  TODO  chat_data.csv  modules  pyrightconfig.json  python_socket_client.py  setup_dependencies_apt.sh  tgbot.db  tgbot.pb  vcpkg.json
src/android_builder/: ArgumentBuilder.cpp  ArgumentBuilder.hpp  CMakeLists.txt  ConfigParsers.cpp  ConfigParsers.hpp  ForkAndRun.cpp  ForkAndRun.hpp  PythonClass.cpp  PythonClass.hpp  RepoUtils.cpp  RepoUtils.hpp  builder.cmake
src/android_builder/configs/: build_config.txt  builder_config.json  builder_config.xml  rom_config.txt
src/android_builder/scripts/: build_rom_utils.py  custom_print.py  print.py  repo_utils.py  subprocess_utils.py  system_info.py  upload_file.py
src/android_builder/tasks/: PerBuildData.hpp  ROMBuildTask.cpp  ROMBuildTask.hpp  RepoSyncTask.cpp  RepoSyncTask.hpp  UploadFileTask.cpp  UploadFileTask.hpp
src/api/: AuthContext.cpp  Authorization.cpp  BuiltInCommandModule.cpp  CMakeLists.txt  CommandModule.cpp  DynCommandModule.cpp  LuaCommandModule.cpp  MessageExt.cpp  RateLimit.cpp  StringResLoader.cpp  TgBotApiImpl.cpp  TgBotTranslator.cpp
src/api/components/: Async.cpp  CMakeLists.txt  ChatJoinRequest.cpp  FileCheck.cpp  ModuleManagement.cpp  OnAnyMessage.cpp  OnCallbackQuery.cpp  OnInlineQuery.cpp  OnMyChatMember.cpp  ReactionsProvider.cpp  Restart.cpp  Restart_posix.cpp  Restart_windows.cpp  UnknownCommand.cpp
src/api/net/: CMakeLists.txt  FileTransferValidation.hpp  SocketServiceClient.cpp  SocketServiceImpl.cpp  SocketServiceImpl.hpp
src/api/types/: Message.cpp
src/cmd_dynamic/: .gitignore  CMakeLists.txt  cmd_DynTest.cpp  cmd_InteractiveBash.cpp  cmd_dynamic.h
src/command_modules/: AskConfirmTool.hpp  CMakeLists.txt  CommandModule.h  CommandModules.cpp  ModelPickerTool.hpp  addblacklist.cpp  alive.cpp  androidbuilder_tasks  ask.cpp  bash.cpp  bash_impl.cpp  clone.cpp  cmd.cpp  cmds.gen.h  compilers.cpp  compilers_impl.cpp  copystickers.cpp  database_impl.cpp  decho.cpp  decide.cpp  delay.cpp  delay.lua  fileid.cpp  flash.cpp  ibash.cpp  id.lua  joinBan.cpp  kernelbuild.cpp  log.cpp  possibility.cpp  q.cpp  randsticker.cpp  restart.cpp  romBuild.cpp  rotatepic.cpp  rtload.cpp  setowner.cpp  setowner.lua  spam.cpp  starttimer.cpp  (+5 more)
src/command_modules/android_builder/: CMakeLists.txt  ConfigParsers.cpp  ConfigParsers.hpp  ForkAndRun.cpp  ForkAndRun.hpp  RepoUtils.cpp  RepoUtils.hpp  Shmem.cpp  Shmem.hpp  SystemInfo.cpp  SystemInfo.hpp
src/command_modules/builder/: BytesConversion.hpp  CMakeLists.txt  CurlUtils.cpp  CurlUtils.hpp  FileWithTimestamp.hpp  ForkAndRun.cpp  ForkAndRun.hpp  PollWrap.cpp  PollWrap.hpp  ProgressBar.hpp  RepoSwitcherTest.cpp  RepoUtils.cpp  (+5 more)
src/database/: CMakeLists.txt  Database.cpp  DatabaseBase.hpp  DatabaseWrapper.cpp  ProtobufDatabase.cpp  ProtobufDatabase.hpp  SQLiteDatabase.cpp  SQLiteDatabase.hpp
src/imagep/: CMakeLists.txt  ImageDebug.cpp  ImageDebug.hpp  ImagePBase.hpp  ImageProcAll.cpp  ImageProcAll.hpp  ImageProcOpenCV.cpp  ImageProcOpenCV.hpp  ImageProcessingAll.hpp  ImageTypeJPEG.cpp  ImageTypeJPEG.hpp  ImageTypePNG.cpp  ImageTypePNG.hpp  ImageTypeWEBP.cpp  ImageTypeWEBP.hpp
src/logging/: AbslLogInit.cpp  AbslLogInit.hpp  CMakeLists.txt  LogcatData.hpp  LoggingClient.cpp  LoggingServer.cpp  LoggingServer.hpp  SpdlogInit.cpp  SpdlogInit.hpp  WrapMain.cpp  log_message.cc  targets.json
src/socket/: ApiDef.hpp  CMakeLists.txt  Client.cpp  ClientBackend.cpp  ClientBackend.hpp  CommandMap.cpp  CommandMap.hpp  Context.cpp  Local.cpp  README.api.md  SocketContext.cpp  SocketContext.hpp  SocketInterfaceBase.cpp  SocketInterfaceBase.h  SocketInterfaceUnix.cpp  SocketInterfaceUnix.h  SocketInterfaceWindows.cpp  SocketInterfaceWindows.h  SocketUtils.cpp  SocketUtils_internal.h  SocketUtils_posix.cpp  SocketUtils_windows.cpp  TCP.cpp  TgBotCommandMap.cpp  TgBotCommandMap.hpp  TgBotCommandStrMap.cpp  TgBotSocket.h  TgBotSocketClient.cpp  TgBotSocket_Export.hpp  UDP.cpp
src/stringres/: CMakeLists.txt  StringResCompiler.cpp  StringResLoader.cpp  StringResLoader.hpp  StringResManager.cpp  StringResManager.hpp
src/utils/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  ConfigFileWatcher.cpp  ConfigFileWatcher.hpp  ConfigManager.cpp  ConfigManager.hpp  ConfigManager_posix.cpp  ConfigManager_windows.cpp  Env.hpp  Env_posix.cpp  Env_windows.cpp  GitData.cpp  GitData.hpp  LinuxPort.h  ResourceManager.cpp  ResourceManager.hpp  config.source  libfs.cpp  libfs.hpp  libfs_posix.cpp  libfs_windows.cpp  libutils.cpp  libutils.h  libutils_posix.cpp  libutils_windows.cpp
tests/: AuthorizationTest.cpp  CMakeLists.txt  ClassProviders.hpp  CommandModulesTest.cpp  ConfigManagerTest.cpp  ConstexprStringCatTest.cpp  DatabaseBackendsTest.cpp  DatabaseLoader.cpp  DatabaseLoader.h  ExtArgsTest.cpp  FileTransferValidationTest.cpp  GetCommandLine.hpp  LLMAdaptersTest.cpp  LinuxKernelBuildServiceTest.cpp  MarkdownV2Test.cpp  MessageWrapperTest.cpp  PopenWdtTest.cpp  PythonClassTest.cpp  ROMBuildServiceTest.cpp  RateLimitTest.cpp  RegexHandlerTest.cpp  ResourceManagerTest.cpp  RestartFmtTest.cpp  SharedMallocTest.cpp  SingleThreadCtrlAccessors.h  SingleThreadCtrlTest.cpp  SocketDataHandlerTest.cpp  SpamBlockTest.cpp  SpamBlockerTest.cpp  StringResLoaderTest.cpp  TestMain.cpp  TryParseTest.cpp  test_af_unix.c  test_module.py
tests/commands/: AliveCmdTest.cpp  AllCommandModulesTest.cpp  BashCmdTest.cpp  CmdCmdTest.cpp  CommandModulesTest.cpp  CommandModulesTest.hpp  DatabaseCmdTest.cpp  DecideCmdTest.cpp  DelayCmdTest.cpp  DeleteEchoCmdTest.cpp  FileIdCmdTest.cpp  FlashCmdTest.cpp  LogCmdTest.cpp  PossibilityCmdTest.cpp  RandStickerCmdTest.cpp  SpamCmdTest.cpp  StringCalcCmdTest.cpp  UpDownCmdTest.cpp
tests/mocks/: DatabaseBase.hpp  LinuxKernelBuildService.hpp  LocaleStrings.hpp  ROMBuildService.hpp  Random.hpp  ResourceProvider.hpp  SocketInterfaceImpl.hpp  TgBotApi.hpp  VFSOperations.hpp
(+985 files in other folders)
